--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,13 @@
-secret = 
+JWT_SECRET=
+JWT_EXPIRES_IN=
+
+DATABASE_TYPE=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_SYNC=
+DATABASE_SSL=
+DATABASE_PORT=
+DATABASE_HOST=
+
+EMAIL_FROM_PASSWORD=
